--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ hs_err_pid*
 main/resources
 
 main/setup
+
+scr/main/resources
+
+TripAdviSOARClient_v4/nb-configuration.xml
+
+TripAdviSOARClient_v4/pom.xml
+
+TripAdviSOARClient_v4/target
